Fix file paths for CSS and JS in index.html
Updated file paths for CSS and JavaScript in index.html.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;500&family=Poppins:wght@300;400;500;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
   
   <!-- CSS personalizados -->
-  <link rel="stylesheet" href="../Pag-Luciana/Styles/Fondo.css">
-  <link rel="stylesheet" href="../Pag-Luciana/Styles/index.css">
+  <link rel="stylesheet" href="Styles/fondo.css">
+  <link rel="stylesheet" href="Styles/index.css">
 </head>
 
 <body class="galactic-index">
@@ -297,7 +297,8 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="../Pag-Luciana/Scripts/Fondo.js"></script>
-  <script src="../Pag-Luciana/Scripts/Index.js"></script>
+  <script src="Scripts/fondo.js"></script>
+  <script src="Scripts/index.js"></script>
 </body>
+
 </html>
