--- a/sorpresa.html
+++ b/sorpresa.html
@@ -31,7 +31,7 @@
     </style>
     
     <!-- CSS personalizados -->
-    <link rel="stylesheet" href="../Pag-Luciana/Styles/Sorpresa.css">
+    <link rel="stylesheet" href="Styles/sorpresa.css">
 </head>
 
 <body class="galactic-sorpresa">
@@ -596,6 +596,7 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="../Pag-Luciana/Scripts/Sorpresa.js"></script>
+  <script src="Scripts/sorpresa.js"></script>
 </body>
+
 </html>
