--- a/razones.html
+++ b/razones.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;500&family=Poppins:wght@300;400;500;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
     
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="../Pag-Luciana/Styles/Razones.css">
+    <link rel="stylesheet" href="Styles/razones.css">
 </head>
 
 <body class="galactic-razones">
@@ -243,6 +243,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../Pag-Luciana/Scripts/Razones.js"></script>
+    <script src="Scripts/razones.js"></script>
 </body>
+
 </html>
