--- a/dibujo.html
+++ b/dibujo.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     
     <!-- Estilo personalizado -->
-    <link rel="stylesheet" href="../Pag-Luciana/Styles/Dibujo.css">
+    <link rel="stylesheet" href="Styles/dibujo.css">
 </head>
 <body>
     <!-- Panel de control flotante (copiado del index) -->
@@ -198,6 +198,7 @@
     
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../Pag-Luciana/Scripts/Dibujo.js"></script>
+    <script src="Scripts/dibujo.js"></script>
 </body>
+
 </html>
