Update print statement from 'Hello' to 'Goodbye'

--- a/sorpresa.html
+++ b/sorpresa.html
@@ -202,7 +202,7 @@
             <div class="spaceship-window-sorpresa">
               <div class="window-frame-sorpresa">
                 <div class="window-content-sorpresa">
-                  <img src="../Pag-Luciana/Imagenes/Paisaje.jpg" alt="Paisaje cósmico" class="window-image-sorpresa">
+                  <img src="Imagenes/paisaje.jpg" alt="Paisaje cósmico" class="window-image-sorpresa">
                   <div class="window-overlay-sorpresa">
                     <i class="fas fa-expand-arrows-alt"></i>
                     <span>Ver en máxima resolución</span>
@@ -221,7 +221,7 @@
             <div class="spaceship-window-sorpresa">
               <div class="window-frame-sorpresa">
                 <div class="window-content-sorpresa">
-                  <img src="../Pag-Luciana/Imagenes/Boda.jpg" alt="Futuro cósmico" class="window-image-sorpresa">
+                  <img src="Imagenes/boda.jpg" alt="Futuro cósmico" class="window-image-sorpresa">
                   <div class="window-overlay-sorpresa">
                     <i class="fas fa-expand-arrows-alt"></i>
                     <span>Visualizar futuro</span>
@@ -600,3 +600,4 @@
 </body>
 
 </html>
+
